@@ -1,6 +1,6 @@
 [Bootstrap]
 #Zip[shared]=packs/EmberCore.zip
-Filesystem[shared]=packs/
+FileSystem[shared]=packs/
 Zip[shared]=packs/OgreCore.zip
 
 [Gui]
